@@ -1,21 +1,25 @@
-AUX init.d_inspircd 661 RMD160 e57891fd77294bbaf18fa5ea15b8d2dfd7f8af2c SHA1 03ac806b0064260d89f20441e9c52cd5e0343b5e SHA256 766629037d1aec981486ef7e62505e7eadaf2f822178b4ab04a999ea78600c2c
-MD5 8ca4e35a8be86c8c226eeac5332eac17 files/init.d_inspircd 661
-RMD160 e57891fd77294bbaf18fa5ea15b8d2dfd7f8af2c files/init.d_inspircd 661
-SHA256 766629037d1aec981486ef7e62505e7eadaf2f822178b4ab04a999ea78600c2c files/init.d_inspircd 661
+AUX init.d_inspircd 720 RMD160 1cefc47b2c1a693636604b0d4ec60171143af970 SHA1 f4f0166300ccab03417322f7cc4608f298cdca21 SHA256 3972344bfd7cd112f4ca6b405592e8b4df163f062ddf586011a6cb9c1ee608c7
+MD5 efbb24f3e73264838f068ce7cdd66673 files/init.d_inspircd 720
+RMD160 1cefc47b2c1a693636604b0d4ec60171143af970 files/init.d_inspircd 720
+SHA256 3972344bfd7cd112f4ca6b405592e8b4df163f062ddf586011a6cb9c1ee608c7 files/init.d_inspircd 720
 DIST InspIRCd-1.0.7.tar.bz2 337187 RMD160 a7387cf88f08f0e9487d25db79d88cde9e9c8283 SHA1 5c8a35b11928c6ad85d905b1bc34de096aa2cf11 SHA256 0ce029e92a0a1713de1d0665d1143295a054a8d925fa724795d709493a8b8d7f
 DIST InspIRCd-1.1.8.tar.bz2 484273 RMD160 6e3b0c9b480fc523998f63cb9c4b033a5fd8ca0f SHA1 91a4ffbaab3f126ecb0fc3a275e714d59e64087f SHA256 cf65aaf23d04dfe08770580bf095a6b7c7ae3051abdfeda7cd2fab1548626616
 EBUILD inspircd-1.0.7-r1.ebuild 3169 RMD160 fb15af7b8a61ba76ad2c767553dc644e0d2671ed SHA1 00271b5391f101caa04c4ee9870f2db10c6bc8f5 SHA256 5c5d69907141f0a8b96acda7a2f45b6a3bbba3a6735efc10e0c7b906010b31f5
 MD5 116b3e453a558a4cee00af046538f865 inspircd-1.0.7-r1.ebuild 3169
 RMD160 fb15af7b8a61ba76ad2c767553dc644e0d2671ed inspircd-1.0.7-r1.ebuild 3169
 SHA256 5c5d69907141f0a8b96acda7a2f45b6a3bbba3a6735efc10e0c7b906010b31f5 inspircd-1.0.7-r1.ebuild 3169
+EBUILD inspircd-1.1.8-r1.ebuild 2339 RMD160 db96bd43fded4b6a920fc75cd646f64db613b822 SHA1 acbea1195bf558bed17bc7b8162f68fbc4264565 SHA256 27bc7dd7b6bb5a23daf024feb748c16d1f28c780980a31a7b68e11d3c0bcb510
+MD5 37fbd1b8fb9d7e88b6fa317840097f33 inspircd-1.1.8-r1.ebuild 2339
+RMD160 db96bd43fded4b6a920fc75cd646f64db613b822 inspircd-1.1.8-r1.ebuild 2339
+SHA256 27bc7dd7b6bb5a23daf024feb748c16d1f28c780980a31a7b68e11d3c0bcb510 inspircd-1.1.8-r1.ebuild 2339
 EBUILD inspircd-1.1.8.ebuild 2208 RMD160 83735d36564969be559078478f5c07cdd9dc10c4 SHA1 d7fef36ded5483e2576b43000a056f8824abfb20 SHA256 150a1b3a4fc809942010c6e7383280100de713b95699ead4d1428ab01b4b1bb6
 MD5 362153eb2f00b83b38b9b51afd38273d inspircd-1.1.8.ebuild 2208
 RMD160 83735d36564969be559078478f5c07cdd9dc10c4 inspircd-1.1.8.ebuild 2208
 SHA256 150a1b3a4fc809942010c6e7383280100de713b95699ead4d1428ab01b4b1bb6 inspircd-1.1.8.ebuild 2208
-MISC ChangeLog 1835 RMD160 5b048a36789ec6ded968c014dc8d6c63f37f16be SHA1 0a0bca0d67cba1ab11b6f730a2085616e8b8260d SHA256 ddc080b6b1b62d1fff6ac23f42786a33ad09817addc7938296a77fb70894bb5e
-MD5 66a43c4f41afb83ed50fc2973d2f5f6d ChangeLog 1835
-RMD160 5b048a36789ec6ded968c014dc8d6c63f37f16be ChangeLog 1835
-SHA256 ddc080b6b1b62d1fff6ac23f42786a33ad09817addc7938296a77fb70894bb5e ChangeLog 1835
+MISC ChangeLog 2005 RMD160 3fdcfaeffe5b122d5e9a04e4b12fc015627389a1 SHA1 9759e760e326d666acf1eea6183fb1b2a1f090bf SHA256 934b37a136e3eb5626ec16d89cae9ec89dc98d05247bff119cd61c325ccb10bb
+MD5 7c255511bfcbfda546d251d94e4402b8 ChangeLog 2005
+RMD160 3fdcfaeffe5b122d5e9a04e4b12fc015627389a1 ChangeLog 2005
+SHA256 934b37a136e3eb5626ec16d89cae9ec89dc98d05247bff119cd61c325ccb10bb ChangeLog 2005
 MISC metadata.xml 348 RMD160 24840ca8f3f64afe243a80d7523d76e7b2772c49 SHA1 b9354f3b162951f027637c55987e8145e5982213 SHA256 29e42121dbb3cd41656c12a37a4a28312ee5732c72d645abf0db5d19363d460c
 MD5 0adacff1bab88932bca3db730b43308a metadata.xml 348
 RMD160 24840ca8f3f64afe243a80d7523d76e7b2772c49 metadata.xml 348
@@ -26,3 +30,6 @@ SHA256 d03f8c939ebe8b65872994956881f6d21c6b6869ddbf1bc850fe7ead920a530c files/di
 MD5 27fdd00e61f9cc976cdbe6cfd05ff02d files/digest-inspircd-1.1.8 247
 RMD160 69ba1e634e81792c86eb5753218eed5478d59ffc files/digest-inspircd-1.1.8 247
 SHA256 baa9a29ae3e2cda3cc9bec8c1eec4429974b7553e67f022ea70d250ae6b6dde1 files/digest-inspircd-1.1.8 247
+MD5 27fdd00e61f9cc976cdbe6cfd05ff02d files/digest-inspircd-1.1.8-r1 247
+RMD160 69ba1e634e81792c86eb5753218eed5478d59ffc files/digest-inspircd-1.1.8-r1 247
+SHA256 baa9a29ae3e2cda3cc9bec8c1eec4429974b7553e67f022ea70d250ae6b6dde1 files/digest-inspircd-1.1.8-r1 247
