@@ -1,0 +1,3 @@
+MD5 4ca1b55574e8d4abd86bbd2a6637dd2e InspIRCd-1.1.8.tar.bz2 484273
+RMD160 6e3b0c9b480fc523998f63cb9c4b033a5fd8ca0f InspIRCd-1.1.8.tar.bz2 484273
+SHA256 cf65aaf23d04dfe08770580bf095a6b7c7ae3051abdfeda7cd2fab1548626616 InspIRCd-1.1.8.tar.bz2 484273
