@@ -1,7 +1,7 @@
 #!/sbin/runscript
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/inspircd/files/init.d_inspircd,v 1.2 2007/07/10 19:20:45 hansmi Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/inspircd/files/init.d_inspircd,v 1.3 2007/07/11 08:10:47 hansmi Exp $
 
 opts="${opts} rehash"
 
@@ -12,7 +12,9 @@ depend() {
 
 start() {
 	ebegin "Starting InspIRCd"
-	start-stop-daemon --start --quiet --chuid inspircd --exec /usr/bin/inspircd &> /dev/null
+	start-stop-daemon --start --quiet --chuid inspircd \
+        --exec /usr/bin/inspircd -- \
+        --logfile /var/log/inspircd/ircd.log &>/dev/null
 	eend $?
 }
 
