@@ -1,6 +1,12 @@
 # ChangeLog for net-irc/inspircd
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/inspircd/ChangeLog,v 1.11 2007/07/10 19:20:45 hansmi Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/inspircd/ChangeLog,v 1.12 2007/07/11 08:10:47 hansmi Exp $
+
+*inspircd-1.1.8-r1 (11 Jul 2007)
+
+  11 Jul 2007; Michael Hanselmann <hansmi@gentoo.org> files/init.d_inspircd,
+  +inspircd-1.1.8-r1.ebuild:
+  Use --logfile, bug 181243.
 
   10 Jul 2007; Michael Hanselmann <hansmi@gentoo.org> files/init.d_inspircd:
   Add "provide ircd".
